@@ -20,7 +20,7 @@
 #Boston, MA 02110-1301, USA.
 
 language="lto"
-compilers="lto1\$(exeext) ltrans-driver\$(exeext)"
+compilers="lto1\$(exeext)"
 stagestuff="lto1\$(exeext)"
 
 gtfiles="\$(srcdir)/lto/lto-tree.h \$(srcdir)/lto/lto-lang.c \$(srcdir)/lto/lto.c"
