@@ -1,3 +1,14 @@
+2009-09-22  Richard Guenther  <rguenther@suse.de>
+
+	PR lto/39276
+	* lto.c (lto_execute_ltrans): Perform ltrans phase manually.
+	* Make-lang.in: Remove ltrans-driver stuff.
+	* config-lang.in: Likewise.
+	* lang.opt (fltrans-driver): Remove.
+	* lto-lang.c (lto_init_options): Remove code initializing
+	ltrans_driver.
+	* ltrans-driver: Remove.
+
 2009-09-21  Diego Novillo  <dnovillo@google.com>
 
 	* lto-lang.c (lto_define_builtins): Remove superfluous
